Salesforce CRM - APAC/IMEA/GTR_WP-22936_3/main/default/objects/Vistex_Agreement_Types__c/fields/Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Type__c</fullName>
    <label>Calculation Type</label>
    <length>12</length>
    <type>Text</type>
</CustomField>