Salesforce CRM - APAC/IMEA/GTR_WP-22936_3/main/default/objects/Vistex_Agreement_Types__c/fields/Condition_Unit__c.field-meta.xml
<CustomField>
    <fullName>Condition_Unit__c</fullName>
    <label>Condition Unit</label>
    <length>12</length>
    <type>Text</type>
</CustomField>