Salesforce CRM - APAC/IMEA/GTR_WP-22936_3/main/default/objects/Vistex_Agreement_Types__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banner Trading Terms</fullName>
            </value>
            <value>
                <fullName>Shopper Investment</fullName>
            </value>
            <value>
                <fullName>Banner Customer Investment</fullName>
            </value>
            <value>
                <fullName>Banner Shopper Lumpsum Investment</fullName>
            </value>
            <value>
                <fullName>Retail Store Investment</fullName>
            </value>
            <value>
                <fullName>Direct Customer Trading Terms</fullName>
            </value>
            <value>
                <fullName>On Premise Investment</fullName>
            </value>
            <value>
                <fullName>CCM Lump Sum Manual Distribution</fullName>
            </value>
            <value>
                <fullName>CCM External Lump Sum Contract</fullName>
            </value>
            <value>
                <fullName>CCM External Performance Contract</fullName>
            </value>
            <value>
                <fullName>CCM Performance Contract</fullName>
            </value>
            <value>
                <fullName>CCM Lump Sum Contract</fullName>
            </value>
            <value>
                <fullName>Base Rebate</fullName>
                <isActive>false</isActive>
                <label>Base Rebate</label>
            </value>
            <value>
                <fullName>Customer Original</fullName>
                <isActive>false</isActive>
                <label>Customer Original</label>
            </value>
            <value>
                <fullName>Distribution</fullName>
                <isActive>false</isActive>
                <label>Distribution</label>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
                <isActive>false</isActive>
                <label>E-Commerce</label>
            </value>
            <value>
                <fullName>EDLP - Key Selling Period</fullName>
                <isActive>false</isActive>
                <label>EDLP - Key Selling Period</label>
            </value>
            <value>
                <fullName>Functional Rebate</fullName>
                <isActive>false</isActive>
                <label>Functional Rebate</label>
            </value>
            <value>
                <fullName>Guideline Discounts</fullName>
                <isActive>false</isActive>
                <label>Guideline Discounts</label>
            </value>
            <value>
                <fullName>Logistics</fullName>
                <isActive>false</isActive>
                <label>Logistics</label>
            </value>
            <value>
                <fullName>Other Promo</fullName>
                <isActive>false</isActive>
                <label>Other Promo</label>
            </value>
            <value>
                <fullName>Performance Rebate</fullName>
                <isActive>false</isActive>
                <label>Performance Rebate</label>
            </value>
            <value>
                <fullName>Performance Rebate - Indirect</fullName>
                <isActive>false</isActive>
                <label>Performance Rebate - Indirect</label>
            </value>
            <value>
                <fullName>Price Promo H&amp;L</fullName>
                <isActive>false</isActive>
                <label>Price Promo H&amp;L</label>
            </value>
            <value>
                <fullName>Visibility</fullName>
                <isActive>false</isActive>
                <label>Visibility</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>