Salesforce CRM - APAC/IMEA/GTR_WP-22936_3/main/default/objects/Vistex_Agreement_Types__c/fields/Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code__c</fullName>
    <label>Promo Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trading Terms</fullName>
            </value>
            <value>
                <fullName>Marketing Terms</fullName>
            </value>
            <value>
                <fullName>Intermediary Trading Terms</fullName>
            </value>
            <value>
                <fullName>Ranging &amp; Promotion</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Banner Incentive</fullName>
            </value>
            <value>
                <fullName>Partnership Programs</fullName>
            </value>
            <value>
                <fullName>Promotional Plan</fullName>
            </value>
            <value>
                <fullName>Marketing Initiative</fullName>
            </value>
            <value>
                <fullName>Ranging</fullName>
            </value>
            <value>
                <fullName>Instore Visibility</fullName>
            </value>
            <value>
                <fullName>Consumer Loyalty Programs</fullName>
            </value>
            <value>
                <fullName>Online Visibility</fullName>
            </value>
            <value>
                <fullName>KSP Promotional Plan - Scan</fullName>
            </value>
            <value>
                <fullName>KSP Promotional Plan - Off Invoice</fullName>
            </value>
            <value>
                <fullName>Pouring Rebate Lumpsum</fullName>
            </value>
            <value>
                <fullName>Cocktail Listing</fullName>
            </value>
            <value>
                <fullName>In-Venue Visibility</fullName>
            </value>
            <value>
                <fullName>Trade Engagement</fullName>
            </value>
            <value>
                <fullName>In-Venue Activation</fullName>
            </value>
            <value>
                <fullName>Marketing Initiative Online &amp; Social</fullName>
            </value>
            <value>
                <fullName>Bonus Stock</fullName>
            </value>
            <value>
                <fullName>Lumpsum Terms</fullName>
            </value>
            <value>
                <fullName>Listing Fee</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Category Development</fullName>
            </value>
            <value>
                <fullName>Consumer Sampling</fullName>
            </value>
            <value>
                <fullName>Customer Level Deals - On Going</fullName>
            </value>
            <value>
                <fullName>Freight Claim</fullName>
            </value>
            <value>
                <fullName>Incentives</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>