Salesforce CRM - APAC/IMEA/GTR_WP-22936_3/main/default/objects/Vistex_Agreement_Types__c/fields/SAP_Accrual_GL_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Accrual_GL_Code__c</fullName>
    <label>SAP Accrual GL Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>