Salesforce CRM - APAC/IMEA/GTR_WP-22936_3/main/default/objects/Vistex_Agreement_Types__c/fields/SAP_Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Promo_Code__c</fullName>
    <label>SAP Promo Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>