Salesforce CRM - APAC/IMEA/GTR_WP-22936_3/main/default/objects/Vistex_Agreement_Types__c/recordTypes/KR_PSA.recordType-meta.xml
<RecordType>
    <fullName>KR_PSA</fullName>
    <active>true</active>
    <description>CCM Codes related to Korea PSA</description>
    <label>KR - PSA</label>
</RecordType>